--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
     <string name="app_name">Buku PR 3</string>
+    <string-array name="status_array">
+        <item>Not Started</item>
+        <item>On Progress</item>
+        <item>Finished</item>
+    </string-array>
 </resources>
